--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Responsive Portfolio</title>
-  </head>
-  <body>
+</head>
+
+<body>
 
     <!-- Header (Navbar) -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
+
+            <!-- ~~~~~~~~~~ self note: add containter here ~~~~~~~~~~ -->
             <a class="navbar-brand">Your Name</a>
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                    <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Navbar Links-->
@@ -41,15 +47,57 @@
                     </li>
                 </ul>
             </div>
-
-
-
-
         </div>
     </nav>
 
 
+
+    <!-- Container (About Me) section-->
+    <div class="container">
+        <div class="col-8">
+            <div class="p-3 mb-2 bg-primary text-white">
+
+                <!-- "About Me" -->
+                <div class="container">
+                    <div class="p-3 mb-2 bg-white text-dark">
+                        <p>About me</p>
+                    </div>
+                </div>
+
+                <!-- image -->
+                <div class="container">
+                    <div class="row">
+
+                            <div class="col-sm-auto">
+                                <div class="p-3 mb-2 bg-light text-dark">
+                                    <img src="placeholder" width="150" height="150">
+                                </div>
+                            </div>
+
+                            <div class="col-sm">
+                                <div class="p-3 mb-2 bg-light text-dark">
+                                    <p>Blah blah bloop talking talking and more talking here not making any sense and being randomly
+                                    strange...Bleh</p>
+                                </div>
+                            </div>
+
+                    </div>
+                </div>
+
+
+
+
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+
     <!-- Background image -->
+    <img src="https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png">
 
 
     <!-- About Me -->
@@ -59,8 +107,15 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
