Updating 'About Me' section for index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <!-- image -->
                 <div class="container">
-                    <div class="row">
+                    <div class="row no-gutters">
 
                         <div class="col-sm-auto">
                             <div class="p-3 mb-2 bg-light text-dark">
@@ -74,6 +74,7 @@
                             </div>
                         </div>
 
+                        <!-- self note: if time, return to text (should wrap around image)-->
                         <div class="col-sm">
                             <div class="p-3 mb-2 bg-light text-dark">
                                 <p>Blah blah bloop talking talking and more talking here not making any sense and being randomly
@@ -101,6 +102,18 @@
 
 
     <!-- About Me -->
+
+
+
+
+
+<!-- Self Note: fix this! -->
+    <!-- Footer (copyright &copy;) -->
+    <div class="container-fluid fixed-bottom">
+        <div class="p-3 mb-2 bg-secondary text-white">
+            <p class="text-center">Copyright &copy;</p>
+        </div>
+    </div>
 
 
 
