Adding Footer to index.html, portfolio.html & contact.html

--- a/index.html
+++ b/index.html
@@ -106,14 +106,11 @@
 
 
 
-
-<!-- Self Note: fix this! -->
-    <!-- Footer (copyright &copy;) -->
-    <div class="container-fluid fixed-bottom">
-        <div class="p-3 mb-2 bg-secondary text-white">
-            <p class="text-center">Copyright &copy;</p>
+    <!-- Fix Footer (add border) -->
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
+        <div class="footer-copyright text-center">Copyright &copy;
         </div>
-    </div>
+    </footer>
 
 
 
