--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,11 @@
     <!-- About Me -->
 
 
-
+    <!-- Fix Footer (add border) -->
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
+        <div class="footer-copyright text-center">Copyright &copy;
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
