--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,12 @@
     <!-- About Me -->
 
 
+    <!-- Fix Footer (add border) -->
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
+        <div class="footer-copyright text-center">Copyright &copy;
+        </div>
+    </footer>
+
 
 
     <!-- Optional JavaScript -->
