--- a/contact.html
+++ b/contact.html
@@ -11,41 +11,57 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Responsive Portfolio</title>
+
+    <style> body {
+        background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
+        background-color: blue;
+        }
+    </style>
+
+
 </head>
 
 <body>
 
     <!-- Header (Navbar) -->
+    <header class="p-0 navbar navbar-expand-sm navbar-light bg-light sticky-top">
+            <div class="container-fluid">
 
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand">Your Name</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <!-- ~~~~~~~~~~ self note: add containter here ~~~~~~~~~~ -->            
+            <!-- col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 m-0 p-0 -->
 
-            <!-- Navbar Links-->
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
+                <div class="container">
+                    <div class="ml-3 pl-5 pr-5 navbar-brand bg-info text-white text-center font-weight-bold">
+                        <h2>Casey M.</h2>
+                    </div>
+                </div>
 
-                    <li class="nav-item active">
-                        <!-- About Me -->
-                        <a class="nav-link" href="index.html">About Me</a>
-                    </li>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <li class="nav-item active">
-                        <!-- Portfolio -->
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
+                <!-- Navbar Links-->
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav">
 
-                    <li class="nav-item active">
-                        <!-- Contacts -->
-                        <a class="nav-link" href="contact.html">Contacts</a>
-                    </li>
-                </ul>
+                        <li class="nav-item active border-right">
+                            <!-- About Me -->
+                            <a class="p-0 pr-2 pl-2 nav-link border-secondary text-secondary" href="index.html">About Me</a>
+                        </li>
+
+                        <li class="nav-item active border-right">
+                            <!-- Portfolio -->
+                            <a class="p-0 pr-2 pl-2 nav-link border-secondary text-secondary" href="portfolio.html">Portfolio</a>
+                        </li>
+
+                        <li class="nav-item active">
+                            <!-- Contacts -->
+                            <a class="p-0 pr-2 pl-2 nav-link text-secondary" href="contact.html">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </header>
 
 
 
