added proper coloring to index.html, portfolio.html & contact.html

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <style> body {
         background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
-        background-color: blue;
+        background-color: rgb(150, 150, 150);
         }
     </style>
 
