--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
     <style> body {
         background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
-        background-color: blue;
+        background-color: rgb(150, 150, 150);
         }
 
         footer {
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    
+
     <!-- Header (Navbar) -->
     <header class="p-0 navbar navbar-expand-sm navbar-light bg-light sticky-top">
             <div class="container-fluid">
