updating header for all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,14 @@
 <body>
 
     <!-- Header (Navbar) -->
-    <header class="p-0 navbar navbar-expand-sm navbar-light bg-light sticky-top">
-        <div class="container-fluid">
+    <header class="p-0 pr-3 navbar navbar-expand-sm navbar-light bg-light sticky-top border-bottom">
+        <div class="container-fluid border-secondary">
 
-            <!-- ~~~~~~~~~~ self note: add containter here ~~~~~~~~~~ -->            
-            <!-- col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 m-0 p-0 -->
+        <!-- ~~~~~~~~~~ self note: add containter here ~~~~~~~~~~ -->            
+        <!-- col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 -->
 
             <div class="container">
-                <div class="ml-3 pl-5 pr-5 navbar-brand bg-info text-white text-center font-weight-bold">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 navbar-brand bg-info text-white text-center font-weight-bold">
                     <h2>Casey M.</h2>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             </button>
 
             <!-- Navbar Links-->
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="navbar">
                 <ul class="navbar-nav">
 
                     <li class="nav-item active border-right">
