--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <body>
 
     <!-- Header (Navbar) -->
-        <header class="p-0 navbar navbar-expand-sm navbar-light bg-light sticky-top border-bottom">
+        <header class="p-0 pr-3 navbar navbar-expand-sm navbar-light bg-light sticky-top border-bottom">
             <div class="container-fluid border-secondary">
 
             <!-- ~~~~~~~~~~ self note: add containter here ~~~~~~~~~~ -->            
-            <!-- col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 m-0 p-0 -->
+            <!-- col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 -->
 
                 <div class="container">
-                    <div class="ml-3 pl-5 pr-5 navbar-brand bg-info text-white text-center font-weight-bold">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 navbar-brand bg-info text-white text-center font-weight-bold">
                         <h2>Casey M.</h2>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                 </button>
 
                 <!-- Navbar Links-->
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="navbar">
                     <ul class="navbar-nav">
 
                         <li class="nav-item active border-right">
@@ -66,12 +66,12 @@
 
 
 
-    <div class="container border col-12 col-sm-12 col-md-9 col-lg-6 mt-4 pb-5 bg-light text-white">
+    <div class="container border col-12 col-sm-12 col-md-9 col-lg-6 mt-5 ml-5 pb-5 bg-light text-white">
         <a class="border-secondary">
 
                 <!-- "About Me" -->
                 <div class="container">
-                        <div class="col-3 pt-1 mt-1 bg-light text-info text-center font-weight-bold">
+                        <div class="col-3 pt-1 mt-2 ml-0 bg-light text-info text-center font-weight-bold">
                             <h3>About me</h3>
                         </div>
                 </div>
