--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,40 @@
 
     <title>Responsive Portfolio</title>
 
-    <style> body {
-        background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
-        background-color: rgb(150, 150, 150);
+    <style>
+        body {
+            background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
+            background-color: rgb(150, 150, 150);
+        }
+
+        .name {
+            color: #777777;
+            width: 700px;
+            position: relative;
+            margin-left: 5px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+        }
+        .email {
+            color: #777777;
+            width: 700px;
+            position: relative;
+            margin-left: 5px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+        }
+        .message {
+            color: #777777;
+            width: 700px;
+            padding-bottom: 200px;
+            position: relative;
+            margin-left: 5px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+        }
+
+        footer {
+            border-top: 8px solid #4aaaa5;
         }
     </style>
 
@@ -64,18 +95,33 @@
     </header>
 
 
+    <div class="container border col-12 col-sm-12 col-md-9 col-lg-6 mt-5 ml-5 pb-3 bg-light text-secondary">
+        <a class="border-secondary">
 
+            <!-- "Contacts" -->
+            <div class="container">
+                <div class="col-3 pt-1 pr-5 mt-2 ml-0 mr-5 bg-light text-info text-center font-weight-bold">
+                    <h3>Contacts</h3>
+                </div>
+            </div>
+            <form>Name<br>
+                <input class="name" placeholder="Name here"><br>
+    
+            <form>Email<br>
+                <input class="email" placeholder="Email here"><br>
+    
+            <form>Message<br>
+                <input class="message" placeholder="Write message here"><br>
+            <a class="ml-1">
+                <button type="button" class="btn btn-info pr-4 pl-4 pb-2 pt-2">Submit</button>
+            </a>
+        </a>
+    </div>
 
-
-    <!-- Background image -->
-    <img src="https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png">
-
-
-    <!-- About Me -->
 
 
     <!-- Fix Footer (add border) -->
-    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom border-top border-info">
         <div class="footer-copyright text-center">Copyright &copy;
         </div>
     </footer>
