Fixing Footer border for index.html, portfolio.html & contact.html

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
 
 
     <!-- Fix Footer (add border) -->
-    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom border-top border-info">
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
         <div class="footer-copyright text-center">Copyright &copy;
         </div>
     </footer>
