--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
             background-color: rgb(150, 150, 150);
             }
+
+        footer {
+            border-top: 8px solid #4aaaa5;
+        }
     </style>
 
 </head>
@@ -106,7 +110,7 @@
 
 
     <!-- Fix Footer (add border) -->
-    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom border-top border-info">
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
             <div class="footer-copyright text-center">Copyright &copy;
             </div>
     </footer>
