--- a/portfolio.html
+++ b/portfolio.html
@@ -12,13 +12,14 @@
 
     <title>Responsive Portfolio</title>
 
-    <style> body {
-        background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
-        background-color: rgb(150, 150, 150);
+    <style>
+        body {
+            background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
+            background-color: rgb(150, 150, 150);
         }
 
         footer {
-            border-top: 10px;
+            border-top: 8px solid #4aaaa5;
         }
     </style>
 
@@ -123,7 +124,7 @@
 
 
     <!-- Fix Footer (add border) -->
-    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom border-top border-info">
+    <footer class="page-footer p-3 mb-0 bg-secondary text-white fixed-bottom">
         <div class="footer-copyright text-center">Copyright &copy;
         </div>
     </footer>
