Updating background & text color for all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         }
 
         footer {
-            border-top: 8px solid #4aaaa5;
+            border-top: 8px solid #1ba3b9;
         }
     </style>
 
@@ -75,12 +75,14 @@
         <a class="border-secondary">
 
             <!-- "Portfolio" -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-3 pl-4 pt-1 ml-3 mt-3 bg-light text-info text-center font-weight-bold">
-                        <h3>Portfolio</h3>
+            <div class="container border-bottom mb-2">
+                <a class="border-secondary">
+                    <div class="row">
+                        <div class="col-3 pt-1 pl-1 mt-2 ml-0 bg-light text-info text-center font-weight-bold">
+                            <h3>Portfolio</h3>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             
             <div class="container">
