--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
 
         footer {
-            border-top: 8px solid #4aaaa5;
+            border-top: 8px solid #1ba3b9;
         }
     </style>
 
@@ -74,10 +74,12 @@
         <a class="border-secondary">
 
             <!-- "About Me" -->
-            <div class="container">
-                <div class="col-3 pt-1 mt-2 ml-0 bg-light text-info text-center font-weight-bold">
-                    <h3>About me</h3>
-                </div>
+            <div class="container border-bottom mb-2">
+                <a class="border-secondary">
+                    <div class="col-3 pt-1 pl-1 mt-2 ml-0 bg-light text-info text-center font-weight-bold">
+                        <h3>About me</h3>
+                    </div>
+                </a>
             </div>
 
             <!-- image -->
